[gd_scene load_steps=11 format=3 uid="uid://cnlbtsbx3khe3"]

[ext_resource type="Script" path="res://Source/Portal/main_portal.gd" id="1_s7rli"]
[ext_resource type="Texture2D" uid="uid://k5oxt63srwpv" path="res://Assets/Images/icon.svg" id="2_tw6r8"]
[ext_resource type="Texture2D" uid="uid://btxfunsjyaih2" path="res://Assets/Icons/chat-4-16.png" id="3_3gf3u"]
[ext_resource type="Texture2D" uid="uid://nxq6r32fj88y" path="res://Assets/Icons/add-user-16.png" id="4_jo7fo"]
[ext_resource type="Texture2D" uid="uid://c8ftqipbfmkcb" path="res://Assets/Icons/star-16.png" id="5_om8f0"]
[ext_resource type="Texture2D" uid="uid://dd8doytcff40t" path="res://Assets/Icons/edit-2-16.png" id="6_s0wia"]
[ext_resource type="Texture2D" uid="uid://1ydfxpjhymuc" path="res://Assets/Icons/globe-4-16.png" id="7_qymyk"]
[ext_resource type="Texture2D" uid="uid://dfklolgpfrq6v" path="res://Assets/Icons/search-3-16.png" id="8_2jf76"]
[ext_resource type="Texture2D" uid="uid://yoxpjwhsm5xu" path="res://Assets/Icons/error-4-16.png" id="9_dibfo"]
[ext_resource type="PackedScene" uid="uid://dr8b7i31xprom" path="res://Source/Content/Test/test_content.tscn" id="10_n5qbr"]

[node name="MainPortal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7rli")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="HeaderHBoxContainer" type="HBoxContainer" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="IconMarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="IconRect" type="TextureRect" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/IconMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_tw6r8")
expand_mode = 2
stretch_mode = 4
flip_h = true

[node name="Nav1MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer"]
layout_mode = 2
columns = 3

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer"]
layout_mode = 2
disabled = true
text = "Items"
flat = false
item_count = 2
popup/item_0/text = "First"
popup/item_0/id = 0
popup/item_1/text = "Second"
popup/item_1/id = 1

[node name="Button" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "File"

[node name="Button2" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Game"

[node name="Button3" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Settings"

[node name="Button4" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Last"

[node name="Button5" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Next"

[node name="TitleMarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/TitleMarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/TitleMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 48
text = "Untitled Sports Game"

[node name="SubTitleLabel" type="Label" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/TitleMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "GM/Owner: Hardie Parham"

[node name="Nav2MarginContainer" type="MarginContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav2MarginContainer"]
layout_mode = 2

[node name="CalendarButton" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav2MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Simulate"

[node name="ContinueButton" type="Button" parent="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav2MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Continue"

[node name="ContentContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 25.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="InboxButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
toggle_mode = true
text = "   Inbox"
icon = ExtResource("3_3gf3u")
alignment = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="SquadButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
disabled = true
text = "   Squad"
icon = ExtResource("4_jo7fo")
alignment = 0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ScheduleButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
disabled = true
text = "   Schedule"
icon = ExtResource("5_om8f0")
alignment = 0

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="LeagueButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
disabled = true
text = "   League"
icon = ExtResource("6_s0wia")
alignment = 0

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="WorldButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer5"]
layout_mode = 2
disabled = true
text = "   World"
icon = ExtResource("7_qymyk")
alignment = 0

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="StaffButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer6"]
layout_mode = 2
disabled = true
text = "   Staff"
icon = ExtResource("8_2jf76")
alignment = 0

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="TrainingButton" type="Button" parent="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer7"]
layout_mode = 2
disabled = true
text = "   Training"
icon = ExtResource("9_dibfo")
alignment = 0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ContentContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ContentContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.5

[node name="TestContent" parent="VBoxContainer/ContentContainer/HBoxContainer/PanelContainer" instance=ExtResource("10_n5qbr")]
visible = false
layout_mode = 2

[node name="FooterContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FooterHBoxContainer" type="HBoxContainer" parent="VBoxContainer/FooterContainer"]
layout_mode = 2

[node name="DebugButtonMarginContainer" type="MarginContainer" parent="VBoxContainer/FooterContainer/FooterHBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="DebugButton" type="Button" parent="VBoxContainer/FooterContainer/FooterHBoxContainer/DebugButtonMarginContainer"]
layout_mode = 2
toggle_mode = true
text = "Show Debug"

[node name="DebugLabelMarginContainer" type="MarginContainer" parent="VBoxContainer/FooterContainer/FooterHBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 20

[node name="DebugLabel" type="Label" parent="VBoxContainer/FooterContainer/FooterHBoxContainer/DebugLabelMarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Debug Text Output"

[node name="DebugEditMarginContainer" type="MarginContainer" parent="VBoxContainer/FooterContainer/FooterHBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="DebugEdit" type="LineEdit" parent="VBoxContainer/FooterContainer/FooterHBoxContainer/DebugEditMarginContainer"]
layout_mode = 2
placeholder_text = "Debug Console"

[node name="FPSMarginContainer" type="MarginContainer" parent="VBoxContainer/FooterContainer/FooterHBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="FpsLabel" type="Label" parent="VBoxContainer/FooterContainer/FooterHBoxContainer/FPSMarginContainer"]
layout_mode = 2
text = "60"

[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav1MarginContainer/GridContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav2MarginContainer/HBoxContainer/CalendarButton" to="." method="_on_calendar_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HeaderContainer/HeaderHBoxContainer/Nav2MarginContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="toggled" from="VBoxContainer/ContentContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/InboxButton" to="." method="_on_inbox_button_toggled"]
[connection signal="toggled" from="VBoxContainer/FooterContainer/FooterHBoxContainer/DebugButtonMarginContainer/DebugButton" to="." method="_on_debug_button_toggled"]
[connection signal="text_submitted" from="VBoxContainer/FooterContainer/FooterHBoxContainer/DebugEditMarginContainer/DebugEdit" to="." method="_on_debug_edit_text_submitted"]
